Bug 391715 - Project plugin does not remember to which sidebar it was moved
Summary: Project plugin does not remember to which sidebar it was moved
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 17.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-11 16:16 UTC by Philipp Maierhöfer
Modified: 2019-07-21 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Maierhöfer 2018-03-11 16:16:11 UTC
When Kate is opened without a document belonging to a project in the session, the project plugin is not shown until such a document is opened. That's ok, but when this happens, the plugin tab always appears in the left sidebar instead of the place where the user moved it before (e.g. right sidebar).

Expected behaviour: the plugin should show up in the sidebar where it used to be when it was last active.

(When the session loaded at startup contains a document from a project, the tab position is remembered correctly.)
Comment 1 Ahmad Samir 2019-06-24 09:03:10 UTC
https://phabricator.kde.org/D22067
Comment 2 Christoph Cullmann 2019-07-13 20:32:13 UTC
Git commit b478ab6c21892f3a00d76c324e8219926285af9f by Christoph Cullmann.
Committed on 13/07/2019 at 20:31.
Pushed by cullmann into branch 'master'.

create project plugin toolviews always, allows user position changes to be persistent

additionally ensure a stable plugin loading order + sort some default plugins to be loaded
first, this is important for toolview creation order

M  +27   -80   addons/project/kateprojectpluginview.cpp
M  +21   -9    kate/katepluginmanager.cpp
M  +5    -8    kate/katepluginmanager.h

https://commits.kde.org/kate/b478ab6c21892f3a00d76c324e8219926285af9f
Comment 3 Philipp Maierhöfer 2019-07-21 10:02:56 UTC
Thank you for taking care of this!