create project plugin toolviews always, allows user position changes to be persistent

additionally ensure a stable plugin loading order + sort some default plugins to be loaded
first, this is important for toolview creation order

BUG: 391715